[gd_scene load_steps=2 format=2]

[ext_resource path="res://MonitorableToken.gd" type="Script" id=1]

[node name="MonitorableToken" type="Control"]
margin_right = 331.0
margin_bottom = 262.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="MainPanel" type="ColorRect" parent="."]
margin_right = 358.0
margin_bottom = 269.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Monitor" type="Button" parent="MainPanel"]
margin_left = 215.0
margin_top = 244.0
margin_right = 333.0
margin_bottom = 264.0
mouse_default_cursor_shape = 2
text = "Start Monitoring"

[node name="Close" type="Button" parent="MainPanel"]
margin_left = 313.0
margin_top = 4.0
margin_right = 333.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
text = "X"

[node name="NetworkLogo" type="TextureRect" parent="MainPanel"]
margin_left = 12.0
margin_top = 22.0
margin_right = 52.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MainPanel"]
margin_left = 77.0
margin_top = 17.0
margin_right = 278.0
margin_bottom = 99.0
text = "Providing fast transfers of
Token
on Network.  Minimum value: 0

Monitoring transfers from:"

[node name="GasBalance" type="Label" parent="MainPanel"]
margin_left = 6.0
margin_top = 199.0
margin_right = 157.0
margin_bottom = 213.0
text = "Network Gas Balance: 0"

[node name="TokenBalance" type="Label" parent="MainPanel"]
margin_left = 6.0
margin_top = 223.0
margin_right = 114.0
margin_bottom = 237.0
text = "Token Balance: 0"

[node name="MonitoredNetworks" type="Control" parent="."]
margin_left = 19.0
margin_top = 121.0
margin_right = 59.0
margin_bottom = 161.0
mouse_filter = 2

[node name="CloseOverlay" type="ColorRect" parent="."]
visible = false
margin_right = 358.0
margin_bottom = 269.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ClosePanel" type="Panel" parent="CloseOverlay"]
margin_left = 107.0
margin_top = 88.0
margin_right = 269.0
margin_bottom = 175.0

[node name="Prompt" type="Label" parent="CloseOverlay/ClosePanel"]
margin_left = 11.0
margin_top = 10.0
margin_right = 164.0
margin_bottom = 58.0
text = "Remove token from
token list?"

[node name="Remove" type="Button" parent="CloseOverlay/ClosePanel"]
margin_left = 5.0
margin_top = 58.0
margin_right = 69.0
margin_bottom = 78.0
mouse_default_cursor_shape = 2
text = "Remove"

[node name="Cancel" type="Button" parent="CloseOverlay/ClosePanel"]
margin_left = 92.0
margin_top = 58.0
margin_right = 156.0
margin_bottom = 78.0
mouse_default_cursor_shape = 2
text = "Cancel"
